# double-ender-sync

./: .editorconfig  .gitignore  .gitleaks.toml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: build-source-package.yml  publish.yml  secret-scan.yml
docs/: calibration.md  initial-offset-safety-net.md  licensing-source-only.md  processing-overview.md  runtime-tuning.md
examples/calibration/: generate_synthetic_demo_pack.py
src/double_ender_sync/: __init__.py  _version.py  api.py  cli.py  config.py  gui.py  gui_launcher.py  types.py
src/double_ender_sync/alignment/: local_adjust.py  offset.py  stretch.py  timeline.py
src/double_ender_sync/analysis/: anchors.py  drift.py  features.py  vad.py
src/double_ender_sync/audio/: io.py  normalize.py  render.py  resample.py
src/double_ender_sync/calibration/: __init__.py  demo_pack.py
src/double_ender_sync/i18n/: __init__.py  catalog.py  resolver.py  validate.py
src/double_ender_sync/i18n/locales/: en.json  ja.json
src/double_ender_sync/report/: report.py
tests/: test_anchor_selection_config.py  test_api.py  test_audio_io.py  test_audio_render.py  test_calibration_demo_pack.py  test_cli_phase0.py  test_gui.py  test_gui_launcher.py  test_i18n.py  test_initial_offset_safety_net.py  test_phase1_offset.py  test_phase2_drift.py  test_phase3_timeline.py  test_phase4_local_adjust.py  test_pyannote_stack_metadata.py  test_report.py  test_stretch.py  test_sync_scoring.py  test_vad.py  test_version.py
tests/helpers/: synthetic_drift.py
